<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/security_options">

        <Preference
            android:key="@string/setup_login_pref"
            android:summary="@string/security_options_summary"
            android:title="@string/login_option" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/backup_settings">

        <Preference
            android:key="@string/setup_backup_zip_pref"
            android:summary="@string/create_zip_file_summary"
            android:title="@string/create_zip_file" />
        <Preference
            android:key="@string/duplicate_pref"
            android:title="@string/find_duplicate" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>